[package]
name = "rs-lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lang",
    "compiler",
    "values"
]

[dependencies]
thiserror = "1.0.32"
linenoise-rust = "0.2.1"
lang = {path ="lang"}
compiler = {path ="compiler"}
values = {path ="values"}